--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "mobx": "^6.4.2",
+    "mobx-react": "^7.3.0",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.21"
