--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     ]
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
+    "mockjs": "^1.1.0",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.21"
