--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@ant-design/pro-layout": "^6.5.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "mockjs": "^1.1.0",
